# actixtest

./: Cargo.toml  memory.rs
sqltest/: .env  Cargo.toml
sqltest/src/: main.rs
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/src/: errors.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  memory.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
